Fixed documentation bug (powered bit was in the wrong place). Implementation of said bit was also wrong in GCN_AdapterData. Fixed bug that was reading invalid memory in HID report generation (off by one error). Implemented null zone support for all analog inputs.

--- a/GCN_Adapter/GCN_Adapter.vcxproj
+++ b/GCN_Adapter/GCN_Adapter.vcxproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <ClCompile Include="Device.c" />
     <ClCompile Include="Driver.c" />
+    <ClCompile Include="GCN_Controller.c" />
     <ClCompile Include="HID.c" />
     <ClCompile Include="Interrupt.c" />
     <ClCompile Include="IO.c" />
