Added ability to calibrate controllers. Backed work done to allow for changes in deadzone algorithm and sensitivity. IOCTL added to trigger calibration.

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,6 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/GCN_Adapter/Win32
+/GCN_Adapter Package/Win32
+/Win32
