Added a simple client project that allows for setting deadzone properties, triggering calibration, and setting rumble (for fun) per controller.

--- a/GCN_Adapter/GCN_Adapter.vcxproj
+++ b/GCN_Adapter/GCN_Adapter.vcxproj
@@ -381,6 +381,7 @@
       <WppScanConfigurationData Condition="'%(ClCompile. ScanConfigurationData)'  == ''">trace.h</WppScanConfigurationData>
       <WppKernelMode>true</WppKernelMode>
       <PreprocessorDefinitions>_WIN64;_AMD64_;AMD64;%(PreprocessorDefinitions);_GCN_ADAPTER_DRIVER_ </PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>%(AdditionalDependencies);$(DDK_LIB_PATH)\usbdex.lib;$(DDK_LIB_PATH)\ntstrsafe.lib;$(DDK_LIB_PATH)\wdmsec.lib;$(DDK_LIB_PATH)\rtlver.lib</AdditionalDependencies>
